@@ -32,6 +32,7 @@ AC_REVISION($Revision: 1.3 $)dnl
 AC_INIT(libcap-ng,0.6.7)
 AC_PREREQ(2.12)dnl
 AM_CONFIG_HEADER(config.h)
+AC_CONFIG_MACRO_DIR([m4])
 
 echo Configuring libcap-ng $VERSION
 
